# clamp

./: README.md  frozen_requirements.lst  pyproject.toml  tox.toml
.github/workflows/: ci.yml
config/: config.yaml
data/: sentences.txt
expes/: embeddings_visu.py.md  gmm_visu.py.md  requirements.lst
src/clamp/: cai.py  cli.py  clustering.py  embeds.py  pipeline.py  predictions.py  utils.py
src/clamp/extras/: pos.py
tests/: test_utils.py
