[project]
name = "clamp"
version = "0.0.1"
authors = [
    { name = "Alvin Tsang", email = "alvintsa@buffalo.edu" },
    { name = "Cassandra Jacobs", email = "cxjacobs@buffalo.edu" },
    { name = "Loïc Grobol", email = "lgrobol@parisnanterre.fr" },
]
description = "CLuster Any Model Package (CLAMP) for clustering large language model predictions."
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate >= 1.2, < 1.3",
    "click >= 8, < 9",
    "numpy >= 2.0, < 2.2",
    "plotnine >= 1.13, < 1.15",
    "polars >= 1.8, 1.20",
    "pyyaml >= 6, < 7",
    "rich",
    "scikit-learn >= 1.5, < 1.7",
    "torch >= 2.4, < 2.6",
    "transformers >= 4.44, < 4.49",
    "umap-learn[plot] >= 0.5, < 0.6",
]

[project.scripts]
clamp = "clamp.cli:cli"

[project.urls]
Homepage = "https://github.com/calicolab/clamp"
Issues = "https://github.com/calicolab/clamp/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
lint.select = [
    "A",
    "B",
    "C90",
    "E",
    "F",
    "N",
    "NPY",
    "PT",
    "PTH",
    "PYI",
    "S",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant
]

[tool.setuptools]
packages = ["clamp"]
package-dir = {"" = "src"}

[tool.mypy]
check_untyped_defs = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]
